third_party/blink/web_tests/external/wpt/dom/idlharness.any.worker-expected.txt
This is a testharness.js-based test.
Found 93 tests; 91 PASS, 2 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Window: original interface defined assert_true: Original interface should be defined expected true got false
PASS Event interface: existence and properties of interface object
PASS Event interface object length
PASS Event interface object name
PASS Event interface: existence and properties of interface prototype object
PASS Event interface: existence and properties of interface prototype object's "constructor" property
PASS Event interface: existence and properties of interface prototype object's @@unscopables property
PASS Event interface: attribute type
PASS Event interface: attribute target
PASS Event interface: attribute srcElement
PASS Event interface: attribute currentTarget
PASS Event interface: operation composedPath()
PASS Event interface: constant NONE on interface object
PASS Event interface: constant NONE on interface prototype object
PASS Event interface: constant CAPTURING_PHASE on interface object
PASS Event interface: constant CAPTURING_PHASE on interface prototype object
PASS Event interface: constant AT_TARGET on interface object
PASS Event interface: constant AT_TARGET on interface prototype object
PASS Event interface: constant BUBBLING_PHASE on interface object
PASS Event interface: constant BUBBLING_PHASE on interface prototype object
PASS Event interface: attribute eventPhase
PASS Event interface: operation stopPropagation()
PASS Event interface: attribute cancelBubble
PASS Event interface: operation stopImmediatePropagation()
PASS Event interface: attribute bubbles
PASS Event interface: attribute cancelable
PASS Event interface: attribute returnValue
PASS Event interface: operation preventDefault()
PASS Event interface: attribute defaultPrevented
PASS Event interface: attribute composed
PASS Event interface: attribute timeStamp
PASS Event interface: operation initEvent(DOMString, boolean, boolean)
PASS CustomEvent interface: existence and properties of interface object
PASS CustomEvent interface object length
PASS CustomEvent interface object name
PASS CustomEvent interface: existence and properties of interface prototype object
PASS CustomEvent interface: existence and properties of interface prototype object's "constructor" property
PASS CustomEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS CustomEvent interface: attribute detail
PASS CustomEvent interface: operation initCustomEvent(DOMString, boolean, boolean, any)
PASS EventTarget interface: existence and properties of interface object
PASS EventTarget interface object length
PASS EventTarget interface object name
PASS EventTarget interface: existence and properties of interface prototype object
PASS EventTarget interface: existence and properties of interface prototype object's "constructor" property
PASS EventTarget interface: existence and properties of interface prototype object's @@unscopables property
PASS EventTarget interface: operation addEventListener(DOMString, EventListener, [object Object],[object Object])
PASS EventTarget interface: operation removeEventListener(DOMString, EventListener, [object Object],[object Object])
PASS EventTarget interface: operation dispatchEvent(Event)
PASS EventListener interface: existence and properties of interface object
PASS AbortController interface: existence and properties of interface object
PASS AbortController interface object length
PASS AbortController interface object name
PASS AbortController interface: existence and properties of interface prototype object
PASS AbortController interface: existence and properties of interface prototype object's "constructor" property
PASS AbortController interface: existence and properties of interface prototype object's @@unscopables property
PASS AbortController interface: attribute signal
PASS AbortController interface: operation abort()
PASS AbortSignal interface: existence and properties of interface object
PASS AbortSignal interface object length
PASS AbortSignal interface object name
PASS AbortSignal interface: existence and properties of interface prototype object
PASS AbortSignal interface: existence and properties of interface prototype object's "constructor" property
PASS AbortSignal interface: existence and properties of interface prototype object's @@unscopables property
PASS AbortSignal interface: attribute aborted
PASS AbortSignal interface: attribute onabort
PASS NodeList interface: existence and properties of interface object
PASS HTMLCollection interface: existence and properties of interface object
PASS MutationObserver interface: existence and properties of interface object
PASS MutationRecord interface: existence and properties of interface object
PASS Node interface: existence and properties of interface object
PASS Document interface: existence and properties of interface object
PASS XMLDocument interface: existence and properties of interface object
PASS DOMImplementation interface: existence and properties of interface object
PASS DocumentType interface: existence and properties of interface object
PASS DocumentFragment interface: existence and properties of interface object
PASS ShadowRoot interface: existence and properties of interface object
PASS Element interface: existence and properties of interface object
PASS NamedNodeMap interface: existence and properties of interface object
PASS Attr interface: existence and properties of interface object
PASS CharacterData interface: existence and properties of interface object
PASS Text interface: existence and properties of interface object
PASS CDATASection interface: existence and properties of interface object
PASS ProcessingInstruction interface: existence and properties of interface object
PASS Comment interface: existence and properties of interface object
PASS AbstractRange interface: existence and properties of interface object
PASS StaticRange interface: existence and properties of interface object
PASS Range interface: existence and properties of interface object
PASS NodeIterator interface: existence and properties of interface object
PASS TreeWalker interface: existence and properties of interface object
PASS NodeFilter interface: existence and properties of interface object
PASS DOMTokenList interface: existence and properties of interface object
Harness: the test ran to completion.

